src/components/calculator/index.css
.calculator {
  font-size: 3rem;
  min-height: 28rem;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.input {
  font-size: inherit;
  font-family: inherit;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI';
  width: clamp(10em, 50vw, 24em);
  padding: 0.5em;
  border: none;
  border-radius: 25px;
  user-select: none;
}

.input:focus {
  outline: none;
}

.result {
  margin-top: 5rem;
  font-size: 4.5rem;
  min-height: 5rem;
  text-align: center;
  font-family: monospace;
}

/* Color Theme */
.input {
  color: var(--color-3);
  background: var(--color-2);
  box-shadow: var(--shadow) var(--shadow) calc(2 * var(--shadow)) #1b2027,
    calc(-1 * var(--shadow)) calc(-1 * var(--shadow)) calc(2 * var(--shadow))
      #29303b;
}

.result {
  color: var(--color-3);
}

